apps/20-media/hydrus-client/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hydrus-client
  labels:
    app: hydrus-client
spec:
  selector:
    app: hydrus-client
  ports:
    - name: http
      protocol: TCP
      port: 5800
      targetPort: 5800
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: api
      protocol: TCP
      port: 45869
      targetPort: 45869
