apps/20-media/hydrus-client/base/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hydrus-client
spec:
  podSelector:
    matchLabels:
      app: hydrus-client
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 5800
        - protocol: TCP
          port: 45869
  egress:
    - {}
